@@ -1,10 +1,19 @@
 {
-  "timestamp" : "2026-02-15T02:23:33Z",
+  "timestamp" : "2026-02-16T02:12:17Z",
   "count_outdated" : 132,
   "uniques_outdated" : 114,
   "count" : 134,
   "uniques" : 116,
   "clones" : [
+    {
+      "timestamp": "2026-01-30T00:00:00Z",
+      "count": 0,
+      "count_minmax": [ 0, 0 ],
+      "count_decinc": [ 0, 0 ],
+      "uniques": 0,
+      "uniques_minmax": [ 0, 0 ],
+      "uniques_decinc": [ 0, 0 ]
+    },
     {
       "timestamp": "2026-01-31T00:00:00Z",
       "count": 1,
@@ -115,15 +124,6 @@
     },
     {
       "timestamp": "2026-02-12T00:00:00Z",
-      "count": 0,
-      "count_minmax": [ 0, 0 ],
-      "count_decinc": [ 0, 0 ],
-      "uniques": 0,
-      "uniques_minmax": [ 0, 0 ],
-      "uniques_decinc": [ 0, 0 ]
-    },
-    {
-      "timestamp": "2026-02-13T00:00:00Z",
       "count": 0,
       "count_minmax": [ 0, 0 ],
       "count_decinc": [ 0, 0 ],
