@@ -3,6 +3,11 @@
   "uniques": 2,
   "clones": [
     {
+      "timestamp": "2026-01-30T00:00:00Z",
+      "count": 0,
+      "uniques": 0
+    },
+    {
       "timestamp": "2026-01-31T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -64,11 +69,6 @@
     },
     {
       "timestamp": "2026-02-12T00:00:00Z",
-      "count": 0,
-      "uniques": 0
-    },
-    {
-      "timestamp": "2026-02-13T00:00:00Z",
       "count": 0,
       "uniques": 0
     }
